<resources>
    <string name="app_name">Firebase</string>
    <string name="selecciona_una_opci_n">Selecciona una opción</string>
    <string name="registrate">¡Regístrate!</string>
    <string name="o">Ó</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="edad">Edad</string>
    <string name="correoelectronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="mostrar_datos">Mostrar datos</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="principal">Principal</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="genero">Género</string>
    <string name="delete">Delete</string>
    <string name="agregar_amigo">Agregar amigo</string>
    <string name="verifica_tu_contrasena">Verifica tu contraseña</string>
    <string name="verificar">Verificar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mis_amigos">Mis amigos</string>
    <string name="buscar">Buscar</string>
    <string name="informacion">Información</string>
    <string name="no_tienes_ningun_amigo_agregado">No tienes ningún amigo agregado.</string>
</resources>