<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingTop="15dp">

    <TextView
        android:id="@+id/dialogPass_TXTtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifica_tu_contrasena"
        android:textColor="#E91E1E"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/dialogPass_eTXTpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogPass_TXTtitulo"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/contrasena_actual"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogPass_eTXTpassword"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogPass_TXTverificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:text="@string/verificar"
            android:textColor="#E91E1E"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/dialogPass_TXTcancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16dp"
            android:textColor="#E91E1E"
            android:text="@string/cancelar"/>
    </LinearLayout>
</RelativeLayout>