<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".SignUp">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:src="@drawable/logotipo"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrate"
                    android:textColor="@color/purple_500"
                    android:textSize="30dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/signUp_eTXTnombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/nombre_s"
                        android:inputType="textPersonName|textCapWords"
                        android:imeOptions="actionGo"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textIsSelectable="true"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/signUp_eTXTapellidoP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="textPersonName|textCapWords"
                            android:imeOptions="actionGo"
                            android:background="@drawable/edit_text"
                            android:layout_marginRight="5dp"
                            android:padding="10dp"
                            android:textColor="@color/white"
                            android:hint="@string/apellido_paterno"
                            android:textColorHint="@color/white"/>

                        <EditText
                            android:id="@+id/signUp_eTXTapellidoM"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="textPersonName|textCapWords"
                            android:imeOptions="actionGo"
                            android:background="@drawable/edit_text"
                            android:layout_marginLeft="5dp"
                            android:padding="10dp"
                            android:textColor="@color/white"
                            android:hint="@string/apellido_materno"
                            android:textColorHint="@color/white"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/signUp_eTXTedad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text"
                            android:hint="@string/edad"
                            android:imeOptions="actionGo"
                            android:inputType="numberSigned"
                            android:padding="10dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />

                        <Spinner
                            android:id="@+id/signUp_SpinnerGenero"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text"
                            android:layout_marginLeft="5dp"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/signUp_eTXTemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionGo"
                        android:background="@drawable/edit_text"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:hint="@string/correoelectronico"
                        android:layout_marginVertical="10dp"
                        android:textColorHint="@color/white"/>

                    <EditText
                        android:id="@+id/signUp_eTXTpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_text"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:hint="@string/contrasena"
                        android:layout_marginVertical="10dp"
                        android:textColorHint="@color/white"/>

                    <Button
                        android:id="@+id/signUp_BTNregistrarme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_sin_stroke"
                        android:text="@string/registrarme"
                        android:layout_marginVertical="10dp"
                        app:backgroundTint="@null" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="15dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/white"
                                android:layout_gravity="center"
                                android:orientation="vertical"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/o"
                                    android:textSize="20dp"
                                    android:layout_marginHorizontal="5dp"
                                    android:textColor="@color/white"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/white"
                                android:layout_gravity="center"
                                android:orientation="vertical"/>
                        </LinearLayout>

                        <Button
                            android:id="@+id/signUp_BTNlogIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn"
                            android:text="@string/iniciar_sesion"
                            app:backgroundTint="@null" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>